--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,7 @@ license = {text = "GPLv3"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "jinja2 (>=3.1.6,<4.0.0)",
-    "peewee (>=3.18.2,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)"
 ]
 
 [build-system]
