--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ license = {text = "GPLv3"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "jinja2 (>=3.1.6,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "emoji (>=2.14.1,<3.0.0)"
 ]
 
 [build-system]
